# src/main/resources/openapi.yml
@@ -1,20 +1,31 @@
 openapi: 3.0.3
 info:
-  title: Swagger Library
+  title: Library management system APIs
   contact:
     email: romachervinko@gmail.com
-  version: 0.0.1
+  version: 1.0.0
 servers:
   - url: http://localhost:8080
 tags:
   - name: theme
-    description: 'the theme API lol'
   - name: publishing-house
-    description: 'the publishing house API'
   - name: book-state
-    description: 'the book state API'
 paths:
   /theme:
+    get:
+      tags:
+        - theme
+      summary: Get themes
+      operationId: getThemes
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Theme'
     post:
       tags:
         - theme
@@ -50,7 +61,7 @@ paths:
     get:
       tags:
         - theme
-      summary: Get theme
+      summary: Get theme by id
       operationId: getThemeById
       parameters:
         - name: id
@@ -66,9 +77,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Theme'
-        '404':
-          description: Theme not found
-          content: { }
     delete:
       tags:
         - theme
@@ -85,7 +93,40 @@ paths:
         '404':
           description: Theme not found
           content: { }
+  /theme/name/{name}:
+    get:
+      tags:
+        - theme
+      summary: Get theme by name
+      operationId: getThemeByName
+      parameters:
+        - name: name
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Theme'
   /publishing-house:
+    get:
+      tags:
+        - publishing-house
+      summary: Get publishing houses
+      operationId: getPublishingHouses
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PublishingHouse'
     post:
       tags:
         - publishing-house
@@ -121,7 +162,7 @@ paths:
     get:
       tags:
         - publishing-house
-      summary: Get publishing house
+      summary: Get publishing house by id
       operationId: getPublishingHouseById
       parameters:
         - name: id
@@ -137,9 +178,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/PublishingHouse'
-        '404':
-          description: Theme not found
-          content: { }
     delete:
       tags:
         - publishing-house
@@ -156,7 +194,43 @@ paths:
         '404':
           description: Theme not found
           content: { }
+  /publishing-house/name/{name}:
+    get:
+      tags:
+        - publishing-house
+      summary: Get publishing house by name
+      operationId: getPublishingHouseByName
+      parameters:
+        - name: name
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PublishingHouse'
   /book-state:
+    get:
+      tags:
+        - book-state
+      summary: Get book states
+      operationId: getBookStates
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/BookState'
+        '404':
+          description: Theme not found
+          content: { }
     post:
       tags:
         - book-state
@@ -192,7 +266,7 @@ paths:
     get:
       tags:
         - book-state
-      summary: Get book state
+      summary: Get bookstate by id
       operationId: getBookStateById
       parameters:
         - name: id
@@ -208,9 +282,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BookState'
-        '404':
-          description: Theme not found
-          content: { }
     delete:
       tags:
         - book-state
@@ -227,6 +298,25 @@ paths:
         '404':
           description: Theme not found
           content: { }
+  /book-state/name/{name}:
+    get:
+      tags:
+        - book-state
+      summary: Get bookstate by name
+      operationId: getBookStateByName
+      parameters:
+        - name: name
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BookState'
 components:
   schemas:
     Theme:
@@ -239,9 +329,6 @@ components:
           type: string
         description:
           type: string
-        update_date:
-          type: string
-          format: date-time
     PublishingHouse:
       type: object
       properties:
@@ -252,9 +339,6 @@ components:
           type: string
         description:
           type: string
-        update_date:
-          type: string
-          format: date-time
     BookState:
       type: object
       properties:
@@ -265,6 +349,3 @@ components:
           type: string
         description:
           type: string
-        update_date:
-          type: string
-          format: date-time
